# gis-utils

./: .clang-format  CMakeLists.txt  README.md  geometry.h  line.cpp  line.h  line_segment.cpp  line_segment.h  point.h  rectangle.h  vcpkg.json
include/gis-utils/: geometry.h  line_segment.h  point.h  rectangle.h
src/: line_segment.cpp  rectangle.cpp
test/: CMakeLists.txt  contains_test.cpp  line_intersect_test.cpp  mbr_test.cpp
